# fest-ticketing-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  battery-report.html  docker-compose-app.yml  docker-compose-db.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.py
app/: dependencies.py  main.py
app/core/: config.py  exception.py  face_recognition.py  scheduler.py  security.py
app/dependencies/: __init__.py  auth.py  database.py
app/models/: __init__.py  auth.py  event.py  event_category.py  event_category_association.py  event_class.py  event_image.py  event_organizer.py  location.py  otp.py  payment.py  personal_access_token.py  provider.py  schedules.py  user.py
app/repositories/: __init__.py  auth_repository.py  event_organizer_repository.py  event_repository.py  location_repository.py  otp_repository.py  payment_repository.py  personal_access_token_repository.py  provider_repository.py  user_repository.py
app/schemas/: auth.py  event.py  event_organizer.py  location.py  otp.py  payment.py  response.py  user.py
app/services/: auth_service.py  cloudinary_service.py  event_organizer_service.py  event_service.py  location_service.py  mail_service.py  otp_service.py  payment_service.py  user_service.py
app/utils/: get_error_details.py  response_helper.py
database/: runner.py  utils.py
database/migrations/: migration_20241030230702_create-user-model.py  migration_20241031085055_create-authentication-model.py  migration_20241101164456_personal-access-token-model.py  migration_20241105055952_otp-model.py
database/seeders/: seed_20241030231247_user-seeder.py  seed_20241031085120_create-authentication-model.py
docker/nginx/: nginx.conf
docker/pgadmin/: server.json
migrations/: env.py  seeder.py
migrations/seeders/: event_category_seeder.py  event_organization_seeder.py  event_seeder.py  user_seeder.py
migrations/versions/: 34cbcc4f2b28_create_table_user_otp_personal_access_.py  34cbcc4f2b28_initial_create_base_location_model.py  35c115257cff_add_model_payment.py  4e992fd6cef9_create_table_event_category_class_.py  4e992fd6cef9_create_table_user_otp_personal_access_.py  (+5 more)
seed/: delete.py  run.py
templates/: otp_email_template.html
(+21 files in other folders)
